--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,13 +21,17 @@
     <string name="lbl_followers">Followers</string>
     <string name="lbl_followed">Followed</string>
     <string name="lbl_views">Views</string>
+    <string name="msg_profile_updated">Your profile has been updated</string>
+    <string name="txt_guest_username">\@guest</string>
+    <string name="txt_guest_name">Guest</string>
 
     <!-- Item Video -->
     <string name="txt_user_sang">%s sang %s</string>
     <string name="txt_zero_reproductions">0 reproductions</string>
 
-    <!-- Profile -->
+    <!-- Edit Profile -->
     <string name="lbl_change_photo">Change Photo</string>
+    <string name="msg_field_required_error">You must enter a %s</string>
 
     <string name="large_text">
         "Material is the metaphor.\n\n"
