--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="lbl_profile_picture">Profile picture</string>
     <string name="msg_general_error">There was an error. Please try again.</string>
     <string name="msg_general_connection_error">There was a connection error. Please try again.</string>
+    <string name="lbl_at_symbol">\@</string>
 
     <!-- Main Menu -->
     <string name="lbl_home">Home</string>
